--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <title>My first three.js app</title>
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>My first three.js app</title>
-</head>
-
-<body>
-</body>
-
+  <body></body>
 </html>
