--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title>My first three.js app</title>
+    <style>
+      body {
+        margin: 0;
+      }
+    </style>
   </head>
 
   <body></body>
